--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /ares_m3u8_download/.vs/ares_m3u8_download
+/ares_m3u8_download/obj
